--- a/css/main.css
+++ b/css/main.css
@@ -128,7 +128,9 @@ h3, h4 {
   font-weight: normal;
   line-height: 2em;
 }
-
+p {
+  line-height: 1.642em;
+}
 p address, .copyright  {
   font-family: 'Open Sans', sans-serif;
   font-size:0.875em;
@@ -260,22 +262,32 @@ address {
     align-items:flex-start;
     flex-flow:column nowrap;
     width: 100%;
+    padding-bottom: 50px;
   }
      
   [value="name@email.com"] {
+    box-sizing: border-box;
     width:100%;
     height:50px;
     background: white;
     border:none;
-    color: #bfc0e7;
-    /****  HOW DO I ADD SPACES BEFORE EMAIL IN BOX  ***/
+    color: #2a423a;
+    font-style: italic;
+    padding: 1em;
+    /****  HOW DO I ADD SPACES BEFORE EMAIL IN  - padding, see above  ***/
   }
     
-  [value="DOWNLOAD ITINERARY"] {
+  [value="download itinerary"] {
       width:100%;
       height:50px;
       background: #2a423a;
-    color: #e2e3ed;
+      color: #e2e3ed;
+      font-family: 'Poppins', Helvetica, Arial, sans-serif;
+      font-weight: 500;
+      font-size: 1.125em;
+      border: none;
+      text-align: center;
+      text-transform: uppercase;
   }
    /* --------  FEATURES AREA  ----------*/
   
@@ -289,12 +301,15 @@ address {
     justify-content: center;
     align-items: center;
     flex-wrap:wrap;
-    padding: 0 20px;
+    padding: 50px 20px;
   }
 
   .features figure {
   }
 
+  .features h2 {
+    margin:0;
+  }
   .features article {
     display:flex;
     justify-content: center;
@@ -322,7 +337,7 @@ address {
     justify-content: flex-start;
     align-items: center;
     flex-wrap:wrap;
-    padding: 0 20px;
+    padding: 50px 20px;
   }
 
   .reviews article {
@@ -334,11 +349,16 @@ address {
 
   .reviews article figure {
     width:100%;
+    padding: 20px 0;
+    margin: 0px;
   }
   
   .review-lacrue {
   }
 
+  .reviews h2 {
+    margin:0px;
+  }
   .reviews h3 {
   }
    /*------- MOBILE STYLES - ABOUT PAGE ---------*/
@@ -354,6 +374,7 @@ address {
 
   .mission-content {
     margin: 0px 20px;
+    padding-bottom: 50px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -376,8 +397,8 @@ address {
   }
 
     /* ---------ABOUT - CONTACT SECTION  -------- */
-
-  .contact-section {
+  
+    .contact-section {
     background-color: #2a423a;
   }
   .contact-section .content-wrapper {
@@ -386,10 +407,17 @@ address {
     align-items: flex-start;
     flex-flow:column wrap;
     margin: 0px 20px;
-    padding-bottom: 30px;
+    padding: 50px 0;
   }
 
-  .contact-section address {
+  .contact-section .content-wrapper h2 {
+    margin: 0px;
+  }
+
+  .contact-section .content-wrapper h4 {
+    margin: 13px 0px;
+
+  }  .contact-section address {
   }
    /* -------------- MOBILE STYLES - FAQ PAGE ---------*/
 
@@ -407,6 +435,7 @@ address {
   }
 
    .faq article {
+     padding-bottom: 25px;
    }
 
    /* --------- FOOTER -------- */
