--- a/css/main.css
+++ b/css/main.css
@@ -400,13 +400,22 @@ address {
     height: 150px;
    }
 
-  .map .content-wrapper {
-
+   .map-container {
+    height: 0;
+    padding-bottom: 75%;
+    overflow: hidden;
+    position: relative;
   }
 
-  .map figure {
-
+  .map iframe {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
   }
+
+  
 
     /* ---------ABOUT - CONTACT SECTION  -------- */
   
@@ -602,7 +611,7 @@ margin: 30px 0px;
 }
 
 header figure {
-  width:34%;
+  width:34.5%;
   margin:0;
 }
 
@@ -797,6 +806,10 @@ flex-flow:column wrap;
   padding: 0 120px;
   }
 
+  header figure {
+    width: 29.5%;
+  }
+  
   header nav ul {
     justify-content: space-between;
   }
