--- a/css/main.css
+++ b/css/main.css
@@ -232,7 +232,7 @@ address {
     align-items: flex-start;
     flex-wrap: wrap;
     padding: 0 20px;
-    height: 450px;
+    height: 575px;
   }
 
   main figure {
@@ -488,6 +488,10 @@ address {
     flex-flow:column wrap;
   }
 
+  footer .contact, .social, h3 {
+    margin-bottom: 0px;
+  }
+
   footer address {
     text-align:center;
   }
@@ -646,7 +650,7 @@ footer .footer-content {
 footer .contact, .social, h3 {
   margin:0px;
 }
-/****   HOME PAGE TABLET STYLES  ****/
+/***************   HOME PAGE TABLET STYLES  ***************/
 .hero-area .content-wrapper {
   padding: 0px 65px;
   height: 370px;
@@ -850,7 +854,7 @@ flex-flow:column wrap;
   }
 
   aside .content-wrapper {
-  justify-content: space-between;
+  justify-content: space-around;
   padding: 50px 200px;
   }
 
@@ -882,7 +886,7 @@ flex-flow:column wrap;
   }
 
   .features article {
-  width: 22.5%;
+  width: 23%;
   padding-left: 40px;
   padding-right: 0px;
   padding-bottom: 30px;
